add liveness check to mongo complete

--- a/13-mongo-complete.yaml
+++ b/13-mongo-complete.yaml
@@ -89,6 +89,14 @@ spec:
           volumeMounts:
             - name: bernard-mongo-db
               mountPath: /data/db
+          livenessProbe:
+            exec:
+              command:
+                - /usr/bin/mongo
+                - --eval
+                - db.serverStatus()
+              initialDelaySeconds: 10
+              timeoutSeconds: 10
 
         # This container initializes the mongodb server, then sleeps.
         - name: init-mongo
